multimedia/ffmpeg: Add missing texi2html dependency, fixes #25803. Enable documentation again by default.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70184 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/ffmpeg/Portfile
+++ b/dports/multimedia/ffmpeg/Portfile
@@ -8,6 +8,7 @@ name            ffmpeg
 conflicts       ffmpeg-devel
 epoch           1
 version         0.6
+revision        1
 license         nonfree GPLv2.1+ LGPLv2.1+
 categories      multimedia
 maintainers     devans openmaintainer
@@ -54,11 +55,13 @@ checksums       md5     d6142a9a5821d6a6262a6edb903faa24 \
                 rmd160  1ff6a8f419239a03d84f67cc954f60f73632432a
 
 patchfiles      patch-libswscale-Makefile.diff \
-                patch-libswscale-swscale.h.diff
+                patch-libswscale-swscale.h.diff \
+                patch-Makefile.diff
 
 use_parallel_build yes
 
-depends_build   port:gmake
+depends_build   port:gmake \
+                port:texi2html
 
 depends_lib     port:lame \
                 port:libvorbis \
@@ -85,7 +88,6 @@ minimum_xcodeversions {9 3.1}
 
 configure.cflags-append    -DHAVE_LRINTF ${configure.cppflags}
 configure.args \
-        --disable-doc \
         --enable-gpl \
         --enable-postproc \
         --enable-swscale --enable-avfilter --enable-avfilter-lavf \
