xorg-server: Pull in patches from my git tree to address stability and match what will be shipped in 2.5.3
git-svn-id: https://svn.macports.org/repository/macports/trunk@70185 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-server/Portfile
+++ b/dports/x11/xorg-server/Portfile
@@ -87,8 +87,14 @@ patchfiles \
         0001-OS-support-fix-writeable-client-vs-IgnoreClient-beha.patch \
         0002-dixstruct-make-ignoreCount-change-more-ABI-friendly.patch \
         0003-XQuartz-Avoid-a-crash-when-mistakenly-free-ing-in-Qu.patch \
-        0004-Workaround-the-GC-clipping-problem-in-miPaintWindow-.patch \
-        0005-fb-Revert-fb-changes-that-broke-XQuartz.patch
+        0004-rootless-Adjust-the-frame-size-of-the-native-root-wi.patch \
+        0005-XQuartz-Bump-bundle-version-to-2.5.2.patch \
+        0006-XQuartz-GL-Fix-__glXAquaScreenCreateDrawable-prototy.patch \
+        0007-XQuartz-GLX-Don-t-mangle-__GLXDrawable-s-pDraw.patch \
+        0008-XQuartz-xpbproxy-Don-t-take-down-the-whole-server-on.patch \
+        0009-XQuartz-Bump-bundle-version-to-2.5.3.patch \
+        0010-Workaround-the-GC-clipping-problem-in-miPaintWindow-.patch \
+        0011-fb-Revert-fb-changes-that-broke-XQuartz.patch
 
 patch.pre_args -p1
 
