--- a/dports/multimedia/ffmpeg/Portfile
+++ b/dports/multimedia/ffmpeg/Portfile
@@ -8,7 +8,7 @@ name            ffmpeg
 conflicts       ffmpeg-devel
 epoch           1
 version         0.6
-revision        1
+revision        2
 license         nonfree GPLv2.1+ LGPLv2.1+
 categories      multimedia
 maintainers     devans openmaintainer
@@ -74,6 +74,7 @@ depends_lib     port:lame \
                 path:lib/libspeex.dylib:speex \
                 port:XviD \
                 port:x264 \
+                port:libvpx \
                 path:lib/pkgconfig/sdl.pc:libsdl \
                 port:bzip2 \
                 port:zlib
@@ -99,6 +100,7 @@ configure.args \
         --enable-libfaad \
         --enable-libxvid \
         --enable-libx264 \
+        --enable-libvpx \
         --enable-libspeex \
         --enable-nonfree \
         --mandir=${prefix}/share/man \
