multimedia/ffmpeg-devel: Merge changes and make it more similar to ffmpeg
git-svn-id: https://svn.macports.org/repository/macports/trunk@70188 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/ffmpeg-devel/Portfile
+++ b/dports/multimedia/ffmpeg-devel/Portfile
@@ -9,22 +9,43 @@ conflicts       ffmpeg
 set svn_rev     23429
 set swscale_rev 31301
 version         ${svn_rev}
+revision        1
 license         nonfree GPLv2.1+ LGPLv2.1+
 categories      multimedia
 maintainers     devans openmaintainer
 
-description     Digital VCR and streaming server (recent unstable version from svn trunk)
+description     FFmpeg is a complete solution to play, record, convert and \
+                stream audio and video.
 
-long_description \
-                FFmpeg is a complete solution to record, convert and stream audio and \
-                video. It includes libavcodec, the leading audio/video codec library. \
-                \
-                This is a recent unstable build of ffmpeg taken from svn trunk and as \
-                such may contain new or changed functionality and/or API/ABI changes \
-                relative to the latest stable release. \
-                \
-                For the current stable version of ffmpeg, please use port ffmpeg.
+long_description        FFmpeg is a complete solution to record, convert and \
+                        stream audio and video. It includes libavcodec, the \
+                        leading audio/video codec library. \
+                        \
+                        The project is made of several components: \
+                        \
+                        ffmpeg is a command line tool to convert one video \
+                        file format to another. It also supports grabbing and \
+                        encoding in real time from a TV card. \
+                        \
+                        ffserver is an HTTP (RTSP is being developped) \
+                        multimedia streaming server for live broadcasts. Time \
+                        shifting of live broadcast is also supported. \
+                        \
+                        ffplay is a simple media player based on SDL and on \
+                        the ffmpeg libraries. \
+                        \
+                        ffprobe gathers information from multimedia streams and \
+                        prints it in human- and machine-readable fashion. \
+                        \
+                        libavcodec is a library containing all the ffmpeg \
+                        audio/video encoders and decoders. Most codecs were \
+                        developped from scratch to ensure best performances \
+                        and high code reusability. \
+                        \
+                        libavformat is a library containing parsers and \
+                        generators for all common audio/video formats.
 
+platforms       darwin
 homepage        http://www.ffmpeg.org/
 master_sites
 distfiles
@@ -34,19 +55,21 @@ worksrcdir      trunk
 use_parallel_build yes
 
 depends_build   bin:svn:subversion \
-                port:gmake
+                port:gmake \
+                port:texi2html
 
 depends_lib     port:lame \
                 port:libvorbis \
                 port:libogg \
                 port:libtheora \
-                port:speex \
                 port:dirac \
                 port:schroedinger \
                 port:faac \
                 port:faad2 \
+                path:lib/libspeex.dylib:speex \
                 port:XviD \
                 port:x264 \
+                port:libvpx \
                 path:lib/pkgconfig/sdl.pc:libsdl \
                 port:bzip2 \
                 port:zlib
@@ -81,14 +104,14 @@ extract {
     file copy ${distpath}/${svn_rev}/trunk ${worksrcpath}
 }
 
-platforms       darwin
+patchfiles patch-Makefile.diff
 
 configure.cflags-append    -DHAVE_LRINTF ${configure.cppflags}
 configure.args \
         --enable-nonfree \
         --enable-gpl \
         --enable-postproc \
-        --enable-avfilter --enable-avfilter-lavf \
+        --enable-swscale --enable-avfilter --enable-avfilter-lavf \
         --enable-libmp3lame \
         --enable-libvorbis \
         --enable-libtheora \
@@ -97,7 +120,9 @@ configure.args \
         --enable-libfaad \
         --enable-libxvid \
         --enable-libx264 \
+        --enable-libvpx \
         --enable-libspeex \
+        --enable-nonfree \
         --mandir=${prefix}/share/man \
         --enable-shared --enable-pthreads \
         --disable-indevs \
@@ -105,7 +130,7 @@ configure.args \
 
 #add --enable-libopenjpeg when problems with openjpeg.h are resolved
 
-if { $build_arch != "" } {
+if {$build_arch != ""} {
     configure.args-append --arch=${build_arch}
 }
 
@@ -127,13 +152,20 @@ post-destroot {
 }
 
 platform darwin 10 {
-    # ticket #20938 -- disable for 32 bit intel only
+    # ticket #20938 -- disable mmx for 32 bit intel only
     if { $build_arch == "i386" } {
+        # swscale is no longer GPL only
         configure.args-delete --enable-swscale
-
         if { ![variant_isset no_mmx] } {
             configure.args-append --disable-mmx --disable-mmx2 --disable-sse --disable-ssse3 --disable-amd3dnow --disable-amd3dnowext
         }
+    }
+}
+
+platform powerpc {
+    # absence of altivec is not automatically detected
+    if {[exec sysctl -n hw.vectorunit] == 0} {
+        configure.args-append --disable-altivec
     }
 }
 
@@ -147,7 +179,7 @@ variant no_gpl description {disallow use of GPL code, license will be LGPL if +n
     configure.args-delete   --enable-libfaad
     depends_lib-delete      port:faad2
     configure.args-delete   --enable-libx264
-    depends_build-delete      port:x264
+    depends_build-delete    port:x264
     configure.args-delete   --enable-libxvid
     depends_lib-delete      port:XviD
 }
@@ -193,7 +225,7 @@ post-activate {
         ui_msg "
 *******
 ******* This build of ${name} includes GPLed code and
-******* is therefore licensed under GPL 2.1 or later.
+******* is therefore licensed under GPL v2.1 or later.
 *******
 ******* The following modules are GPLed:
 *******
@@ -209,7 +241,7 @@ post-activate {
         ui_msg "
 *******
 ******* This build of ${name} includes no GPLed or nonfree
-******* code and is therefore licensed under LGPL 2.1 or later.
+******* code and is therefore licensed under LGPL v2.1 or later.
 *******
 "
     }
