graphviz, graphviz-devel: do archcheck libgs.dylib; it does turn out to get used after all
git-svn-id: https://svn.macports.org/repository/macports/trunk@70192 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/graphviz/Portfile
+++ b/dports/graphics/graphviz/Portfile
@@ -53,8 +53,6 @@ depends_lib                     port:xorg-libXaw \
                                 port:zlib \
                                 port:gettext
 
-# Ghostscript is not included here because Graphviz uses the gs executable,
-# not the libgs library.
 archcheck.files                 lib/libXaw.dylib \
                                 lib/libpango-1.0.dylib \
                                 lib/libjpeg.dylib \
@@ -63,6 +61,7 @@ archcheck.files                 lib/libXaw.dylib \
                                 lib/libfreetype.dylib \
                                 lib/libexpat.dylib \
                                 lib/libgd.dylib \
+                                lib/libgs.dylib \
                                 lib/libz.dylib \
                                 lib/libintl.dylib
 
