--- a/dports/graphics/graphviz-devel/Portfile
+++ b/dports/graphics/graphviz-devel/Portfile
@@ -52,8 +52,6 @@ depends_lib                     port:xorg-libXaw \
                                 port:zlib \
                                 port:gettext
 
-# Ghostscript is not included here because Graphviz uses the gs executable,
-# not the libgs library.
 archcheck.files                 lib/libXaw.dylib \
                                 lib/libpango-1.0.dylib \
                                 lib/libjpeg.dylib \
@@ -62,6 +60,7 @@ archcheck.files                 lib/libXaw.dylib \
                                 lib/libfreetype.dylib \
                                 lib/libexpat.dylib \
                                 lib/libgd.dylib \
+                                lib/libgs.dylib \
                                 lib/libz.dylib \
                                 lib/libintl.dylib
 
