plplot: updated to 5.9.6 (#25879). Also includes a fix for #24702.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70193 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/plplot/Portfile
+++ b/dports/science/plplot/Portfile
@@ -4,15 +4,15 @@
 PortSystem      1.0
 
 name            plplot
-version         5.9.5
+version         5.9.6
 platforms       darwin
 maintainers     takeshi
 categories      science
 description     Scientific plotting package
 master_sites    sourceforge
-checksums       md5     214c9f984f046bee18f6a3cce2cdec39 \
-                sha1    f24d096238398b5519427145f0134ce1c180f0e8 \
-                rmd160  75f21ad12fbe952c964e0a9b3d298a4f059157c2
+checksums       md5     772c772bde3a107e5f06d21cefa7f6b6 \
+                sha1    c4926e8d47c213cca5de4182923f81397d1f9b7d \
+                rmd160  c7c300dbb57101e8c3157457174b3d243a5d6e69
 homepage        http://plplot.sourceforge.net/
 long_description \
     PLplot is a cross-platform software package for creating           \
@@ -66,6 +66,7 @@ configure.args          -DCMAKE_VERBOSE_MAKEFILE=ON \
                         -DPLD_aqt=OFF \
                         -DPLD_extcairo=ON \
                         -DPLD_memcairo=ON \
+                        -DPLD_ps=ON \
                         -DPLD_psttf=ON \
                         -DPLD_pscairo=ON  \
                         -DPLD_pdfcairo=ON \
