libvpx: ensure we're UsingTheRightCompiler (at link time)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70196 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libvpx/Portfile
+++ b/dports/multimedia/libvpx/Portfile
@@ -30,6 +30,7 @@ configure.args  --enable-vp8 \
                 --enable-postproc \
                 --enable-multithread \
                 --enable-runtime-cpu-detect
+configure.env   LD="${configure.cc}"
 
 # FIXME: Building docs would require php5 and doxygen as dependency
 configure.args-append --disable-install-docs
