Updated duplicity to 0.6.09, resolving t25895
git-svn-id: https://svn.macports.org/repository/macports/trunk@70198 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/duplicity/Portfile
+++ b/dports/sysutils/duplicity/Portfile
@@ -6,7 +6,7 @@ PortGroup           python26 1.0
 
 name                duplicity
 categories          sysutils
-version             0.6.08b
+version             0.6.09
 set stable_series   [join [lrange [split ${version} .] 0 1] .]-series
 platforms           darwin
 maintainers         singingwolfboy openmaintainer
@@ -24,9 +24,9 @@ distname            duplicity-${version}
 homepage            http://duplicity.nongnu.org/
 master_sites        https://launchpad.net/duplicity/${stable_series}/${version}/+download
 
-checksums           md5     f4f4182ab71aa1de80c047bf1e4c7a04 \
-                    sha1    5346a1799c15939862b3a402a44c27b32c8fee77 \
-                    rmd160  350b311702251d4f6f8562d460f27deecdef8606
+checksums           md5     2ed04ce2fdfce0f47faea0c9ef95fde8 \
+                    sha1    0347cdd1d5cc8512ac90b806ab1f80956c6c3e4a \
+                    rmd160  43e9157fc549a2f7771a693d3ca69d294ff4e6ef
 
 build.args          --librsync-dir=${prefix}
 universal_variant   no
