--- a/dports/perl/p5-xml-namespacesupport/Portfile
+++ b/dports/perl/p5-xml-namespacesupport/Portfile
@@ -3,6 +3,7 @@
 PortSystem      1.0
 PortGroup       perl5 1.0
 perl5.setup     XML-NamespaceSupport 1.11
+revision        1
 maintainers     nomaintainer
 platforms       darwin
 description     Simple generic namespace support class
@@ -15,3 +16,4 @@ checksums           md5     222cca76161cd956d724286d36b607da \
                     rmd160  f8d657044b7261bf1ac4d68c8bd004aa81d748db
 
 universal_variant   no
+supported_archs     noarch
