p5-test-simple is noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@70201 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-test-simple/Portfile
+++ b/dports/perl/p5-test-simple/Portfile
@@ -4,6 +4,7 @@ PortSystem          1.0
 PortGroup           perl5 1.0
 
 perl5.setup         Test-Simple 0.94
+revision            1
 maintainers			email.arc.nasa.gov:sal
 description			Basic utilities for writing perl tests
 long_description	${description}
@@ -25,3 +26,4 @@ checksums           md5 e4e09d8bf2cc73124152ba2c45c95b5b \
 ## }
 
 universal_variant   no
+supported_archs     noarch
