log2timeline: change gtk2 dependency to p5-gtk2; see #25897
git-svn-id: https://svn.macports.org/repository/macports/trunk@70203 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/log2timeline/Portfile
+++ b/dports/security/log2timeline/Portfile
@@ -5,6 +5,7 @@ PortGroup           perl5 1.0
 
 name                log2timeline
 version             0.50
+revision            1
 categories          security
 platforms           darwin
 maintainers         yahoo.fr:jul_bsd openmaintainer
@@ -27,7 +28,7 @@ checksums           md5     8e8aa929d8d055a3045c039026a5f789 \
                     sha1    be0e84c16afd39b997037bb27e81f5036f1af390 \
                     rmd160  7548e7e6f627f4ed2cdeb7e17c19a7ae1e58f45a
 
-depends_lib         port:gtk2 \
+depends_lib         port:p5-gtk2 \
                     port:p5-xml-libxml \
                     port:p5-netpacket port:p5-net-pcap \
                     port:p5-image-exiftool \
