log2timeline: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@70204 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/log2timeline/Portfile
+++ b/dports/security/log2timeline/Portfile
@@ -50,3 +50,6 @@ configure.cmd       perl Makefile.PL
 post-destroot {
     eval delete [glob ${destroot}${prefix}/lib/perl5/*/darwin-2level/perllocal.pod]
 }
+
+livecheck.type      regex
+livecheck.regex     ${name}_(\\d+(\\.\[0-9a-z\]+)+)${extract.suffix}
