log2timeline: alphabetize dependencies, why not
git-svn-id: https://svn.macports.org/repository/macports/trunk@70205 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/log2timeline/Portfile
+++ b/dports/security/log2timeline/Portfile
@@ -28,20 +28,21 @@ checksums           md5     8e8aa929d8d055a3045c039026a5f789 \
                     sha1    be0e84c16afd39b997037bb27e81f5036f1af390 \
                     rmd160  7548e7e6f627f4ed2cdeb7e17c19a7ae1e58f45a
 
-depends_lib         port:p5-gtk2 \
-                    port:p5-xml-libxml \
-                    port:p5-netpacket port:p5-net-pcap \
-                    port:p5-image-exiftool \
+depends_lib         port:p5-archive-zip \
+                    port:p5-carp-assert \
+                    port:p5-datetime-format-strptime \
+                    port:p5-datetime-timezone \
+                    port:p5-dbd-sqlite \
+                    port:p5-dbi \
+                    port:p5-digest-crc \
+                    port:p5-gtk2 \
                     port:p5-html-parser \
                     port:p5-html-scrubber \
-                    port:p5-digest-crc \
-                    port:p5-datetime-timezone \
-                    port:p5-datetime-format-strptime \
-                    port:p5-dbi \
-                    port:p5-archive-zip \
-                    port:p5-carp-assert \
-                    port:p5-dbd-sqlite \
-                    port:p5-libwww-perl
+                    port:p5-image-exiftool \
+                    port:p5-libwww-perl \
+                    port:p5-net-pcap \
+                    port:p5-netpacket \
+                    port:p5-xml-libxml
 
 supported_archs     noarch
 
