multimedia/libvpx: Fix build problem when path to the source contains the string ".o", as in macports.org. Fixes #25815
git-svn-id: https://svn.macports.org/repository/macports/trunk@70208 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libvpx/Portfile
+++ b/dports/multimedia/libvpx/Portfile
@@ -25,6 +25,8 @@ depends_lib     port:yasm
 # gcc-4.2: -E, -S, -save-temps and -M options are not allowed with multiple -arch flags
 universal_variant no
 
+patchfiles      patch-configure.sh.diff
+
 configure.args  --enable-vp8 \
                 --enable-psnr \
                 --enable-postproc \
