xorg-server-devel: Pull in changes from my git branch for AIGLX fix and RandR support
git-svn-id: https://svn.macports.org/repository/macports/trunk@70211 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-server-devel/Portfile
+++ b/dports/x11/xorg-server-devel/Portfile
@@ -6,6 +6,7 @@ name		xorg-server-devel
 conflicts       xorg-server
 set my_name	xorg-server
 version		1.8.99.905
+revision        1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	The X.org / Xquartz X server.
@@ -83,10 +84,33 @@ configure.env-append \
 	RAWCPP=${configure.cpp}
 
 patchfiles \
-        0006-Workaround-the-GC-clipping-problem-in-miPaintWindow-.patch \
-        0007-fb-Revert-fb-changes-that-broke-XQuartz.patch
+        0001-rootless-Adjust-the-frame-size-of-the-native-root-w.patch \
+        0002-dix-hack-around-enter-leave-event-issues-for-grabbe.patch \
+        0003-xkb-use-GetMaster-instead-of-dev-u.master.patch \
+        0004-Use-DocBook-stylesheets-from-xorg-sgml-doctools-if-t.patch \
+        0005-Add-name-argument-to-CreateNewResourceType-documenta.patch \
+        0006-Add-documentation-of-the-Xserver-DTrace-probes.patch \
+        0007-XQuartz-GLX-Don-t-mangle-__GLXDrawable-s-pDraw.patch \
+        0008-XQuartz-xpbproxy-Don-t-take-down-the-whole-server.patch \
+        0009-ddc-Fix-memory-leak-in-GetEDID_DDC1.patch \
+        0010-XQuartz-Make-application-switching-work-better-for.patch \
+        0011-XQuartz-UpdateScreen-at-the-end-of-SetRootless.patch \
+        0012-XQuartz-xpr-Bail-on-errors-during-unlock-and-dest.patch \
+        0013-XQuartz-RandR-Implement-basic-RandR-functionality.patch \
+        0014-XQuartz-RandR-Toggle-rootless-mode-on-XRandR-mode.patch \
+        0015-XQuartz-RandR-Remove-FAKE_RANDR-code.patch \
+        0016-XQuartz-RandR-use-deprecated-CG-APIs-only-on-Leopa.patch \
+        0017-XQuartz-Ignore-kXquartzToggleFullscreen-when-rootle.patch \
+        0018-XQuartz-RandR-Respond-better-to-resolution-changes.patch \
+        0019-XQuartz-RandR-Better-handle-switching-betwen-RandR.patch \
+        0020-XQuartz-Don-t-change-the-rootless-preference-when-c.patch \
+        0021-Workaround-the-GC-clipping-problem-in-miPaintWindow.patch \
+        0022-fb-Revert-fb-changes-that-broke-XQuartz.patch
 
 patch.pre_args -p1
+
+use_autoreconf yes
+autoreconf.args -fvi
 
 build.args V=1
 
