python/py26-openbabel - fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@70213 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-openbabel/Portfile
+++ b/dports/python/py26-openbabel/Portfile
@@ -32,3 +32,7 @@ post-destroot {
       ${destroot}${prefix}/share/doc/${name}
 }
 
+livecheck.type      regex
+livecheck.url       http://sourceforge.net/projects/openbabel/files/openbabel/
+livecheck.regex     openbabel-\(\[\\d.\]+\)\.tar\.gz
+
