--- a/dports/x11/xorg-libXi/Portfile
+++ b/dports/x11/xorg-libXi/Portfile
@@ -20,7 +20,9 @@ checksums           md5     75324546e3d1c0cce9d508feb05e4ed0 \
 use_bzip2   yes
 use_parallel_build      yes
 
-depends_build   port:pkgconfig
+depends_build   port:pkgconfig \
+                port:xmlto \
+                port:asciidoc
 
 depends_lib     port:xorg-libXext \
 		port:xorg-inputproto
