--- a/dports/www/libmicrohttpd/Portfile
+++ b/dports/www/libmicrohttpd/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                libmicrohttpd
-version             0.4.6
+version             0.9.0
 categories          www
 license             LGPL
 maintainers         snc openmaintainer
@@ -16,11 +16,15 @@ long_description    \
                     free software and part of the GNU project.
 homepage            http://www.gnu.org/software/libmicrohttpd/
 platforms           darwin
+depends_lib         port:gnutls port:libgcrypt port:curl
+
 master_sites        ftp://ftp.gnu.org/gnu/libmicrohttpd/
 
-checksums           md5     61698da6aa04744ea076c327f66fc05a \
-                    sha1    930f18734496247d4c8d391268110c15a0fd355d \
-                    rmd160  58ed14097f6f99d7dfca7cca665904fdafb86dd5
+checksums           md5     9c0d681ee88cdbe332919e102ad27953 \
+                    sha1    f2e0e02e9f4cdf0e35fffeadb719a318a40ed33a
+
+patchfiles          missing-libgcrypt-when-link-with-gnutls.patch \
+                    patch-src-examples-https_fileserver_example.c.diff
 
 livecheck.type      regex
 livecheck.url       http://ftp.gnu.org/gnu/libmicrohttpd/
