--- a/dports/www/ZendFramework/Portfile
+++ b/dports/www/ZendFramework/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                ZendFramework
-version             1.10.6
-revision        1
+version             1.10.7
 categories          www lang
 license             BSD
 maintainers         snc openmaintainer
@@ -57,9 +56,8 @@ variant manual_extensions description {Let me pick my own php extensions} {
 
 master_sites        http://framework.zend.com/releases/${name}-${version}/
 
-checksums           md5     094999cd940bcc643563bca0cf1817e0 \
-                    sha1    01ca26cb0f565cdff7f053d3f2bf943be421f0a4 \
-                    rmd160  d155ae8a55d5143fe81d3fdf15a82ff2b7d0a2e9
+checksums           md5     e8c6a473f12dbf0db31e48849ffa18b6 \
+                    sha1    f847e679d4a3d72fe5bb10515b2a835edc61cf57
 
 set zf_main_dir     ${prefix}/www/${name}
 set zf_doc_dir      ${prefix}/share/doc/${name}
