--- a/dports/textproc/fop/Portfile
+++ b/dports/textproc/fop/Portfile
@@ -4,9 +4,11 @@ PortSystem 1.0
 
 name                fop
 version             0.95
+revision            1
 categories          textproc java
 maintainers         boeyms openmaintainer
 platforms           darwin
+supported_archs     noarch
 description         Apache FOP Java XSL-FO Print Formatter
 long_description    Apache FOP is the world's first print formatter driven by \
                     XSL formatting objects. It is a Java application that \
