--- a/dports/textproc/asciidoc/Portfile
+++ b/dports/textproc/asciidoc/Portfile
@@ -4,6 +4,7 @@ PortSystem			1.0
 
 name				asciidoc
 version				8.5.3
+revision			1
 categories			textproc
 maintainers			boeyms openmaintainer
 description			Formatter/translator for text files to numerous formats
@@ -17,6 +18,7 @@ long_description \
 	the user.
 
 platforms		darwin
+supported_archs	noarch
 
 homepage		http://www.methods.co.nz/asciidoc/
 master_sites	sourceforge
@@ -28,9 +30,6 @@ checksums		md5     7377872275c2a575151655b19ac6dd3e \
 depends_run		port:python26 \
 				port:docbook-xml-4.5 \
 				port:fop
-
-# fop is not universal
-universal_variant no
 
 destroot.target	install docs vimdir=${prefix}/share/vim/vimfiles/
 
