xmlto: remove fop from depends_skip_archcheck as it is noarch, and fix typo in findutils' name
git-svn-id: https://svn.macports.org/repository/macports/trunk@70224 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/xmlto/Portfile
+++ b/dports/textproc/xmlto/Portfile
@@ -40,7 +40,7 @@ depends_run     port:coreutils \
                 port:fop \
                 port:dblatex
 
-depends_skip_archcheck fop dblatex gindutils coreutils
+depends_skip_archcheck dblatex findutils coreutils
 
 patchfiles      patch-xmlto.in.diff
 
