Port math/petsc: add debug variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@70226 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/petsc/Portfile
+++ b/dports/math/petsc/Portfile
@@ -58,6 +58,11 @@ variant triangle description {build with support for Triangle library} {
     depends_lib-append	port:triangle
 }
 
+variant debug description {build with debug support} {
+    configure.args-delete   --with-debugging=0
+    configure.args-append   --with-debugging=1
+}
+
 post-activate {
     ui_msg "******************************************************"
     ui_msg "* Add the following line to your .bash_profile if you "
