amarok: disable universal variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@70228 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/amarok/Portfile
+++ b/dports/kde/amarok/Portfile
@@ -28,6 +28,9 @@ depends_lib-append  port:kdebase4-runtime port:kdelibs4 \
                     port:loudmouth port:qca port:libmtp port:libgpod \
                     path:bin/mysql_config5:mysql5
 
+# liblastfm is not universal
+universal_variant   no
+
 pre-configure {
     if {![file exists ${prefix}/lib/mysql5/mysql/libmysqld.a]} {
         ui_error "${name} cannot be installed because MySQL was not installed with the libmysqld embedded server."
