Add python24, python25 and python26 variants
git-svn-id: https://svn.macports.org/repository/macports/trunk@70233 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/diffuse/Portfile
+++ b/dports/devel/diffuse/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 
 name                diffuse
 version             0.4.3
-revision            1
+revision            2
 categories          devel
 platforms           darwin
 maintainers         tommyd openmaintainer
@@ -22,19 +22,38 @@ checksums           md5     488812eb4d72567073c0de5552c58b74 \
 
 use_bzip2           yes
 
-depends_lib-append  port:py-gtk2
+set pythonexec ""
+
+variant python24 conflicts python25 python26 description {Use python24} {
+    depends_lib-append    port:py-gtk2
+    set pythonexec        ${prefix}/bin/python2.4
+}
+
+variant python25 conflicts python24 python26 description {Use python25} {
+    depends_lib-append    port:py25-gtk
+    set pythonexec        ${prefix}/bin/python2.5
+}
+
+variant python26 conflicts python24 python25 description {Use python26} {
+    depends_lib-append    port:py26-gtk
+    set pythonexec        ${prefix}/bin/python2.6
+}
+
+if {![variant_isset python24] && ![variant_isset python25]} {
+    default_variants +python26
+}
 
 use_configure       no
 
 post-patch {
-    reinplace "s|/usr/bin/env python|${prefix}/bin/python2.4|g" \
+    reinplace "s|/usr/bin/env python|${pythonexec}|g" \
         ${worksrcpath}/src/usr/bin/diffuse
 }
 
 build {}
 
 destroot {
-    system "cd ${worksrcpath} && ${prefix}/bin/python2.4 \
+    system "cd ${worksrcpath} && ${pythonexec} \
        ./install.py \
        --prefix=${prefix} \
        --destdir=${destroot} \
