libvpx: the universal variant doesn't exist (see r70022) so don't try to set options when the user requests it
git-svn-id: https://svn.macports.org/repository/macports/trunk@70236 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libvpx/Portfile
+++ b/dports/multimedia/libvpx/Portfile
@@ -55,7 +55,7 @@ build.target
 build.args      verbose=1
 
 # set configure parameters depending on if universal or not
-if {![variant_isset universal]} {
+if {![variant_isset universal] || ![variant_exists universal]} {
     # specify only the single target, otherwise 'configure' will try
     # for a 'universal' install.
     set tgt_isa "${build_arch}"
