libvpx: use a switch statement where that is the most logical construct
git-svn-id: https://svn.macports.org/repository/macports/trunk@70237 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libvpx/Portfile
+++ b/dports/multimedia/libvpx/Portfile
@@ -58,11 +58,10 @@ build.args      verbose=1
 if {![variant_isset universal] || ![variant_exists universal]} {
     # specify only the single target, otherwise 'configure' will try
     # for a 'universal' install.
-    set tgt_isa "${build_arch}"
-    if {${build_arch} == "i386"} {
-        set tgt_isa "x86"
-    } elseif {${build_arch} == "ppc"} {
-        set tgt_isa "ppc32"
+    switch ${build_arch} {
+        i386    { set tgt_isa x86           }
+        ppc     { set tgt_isa ppc32         }
+        default { set tgt_isa ${build_arch} }
     }
     configure.args-append --target=${tgt_isa}-${os.platform}${os.major}-gcc
 } else {
