lang/ruby186: add comments for patchfiles
git-svn-id: https://svn.macports.org/repository/macports/trunk@70246 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby186/Portfile
+++ b/dports/lang/ruby186/Portfile
@@ -93,6 +93,12 @@ platform darwin {
 }
 
 platform darwin 9 {
+	# dot-darwin.diff: avoid "darwin" matches /win/ in lib/rdoc/options.rb
+	# etc-irbrc.diff: require /etc/irbrc when the platform is not Windows
+	# ignore-gsetcontext.diff: do not use getcontext()/setcontext()
+	# md5_sha1_commoncrypto.diff: use CommonCrypto when available
+	# use-setreugid.diff: use setreuid()/setrguid() on 10.5 or later
+	# words-bigendian-from-arch.diff: [ruby-core:12895], [ruby-dev:32160]
 	patchfiles-append      	dot-darwin.diff \
 							etc-irbrc.diff \
 							ignore-gsetcontext.diff \
