lang/ruby186: fix a typo in comments
git-svn-id: https://svn.macports.org/repository/macports/trunk@70247 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby186/Portfile
+++ b/dports/lang/ruby186/Portfile
@@ -97,7 +97,7 @@ platform darwin 9 {
 	# etc-irbrc.diff: require /etc/irbrc when the platform is not Windows
 	# ignore-gsetcontext.diff: do not use getcontext()/setcontext()
 	# md5_sha1_commoncrypto.diff: use CommonCrypto when available
-	# use-setreugid.diff: use setreuid()/setrguid() on 10.5 or later
+	# use-setreugid.diff: use setreuid()/setregid() on 10.5 or later
 	# words-bigendian-from-arch.diff: [ruby-core:12895], [ruby-dev:32160]
 	patchfiles-append      	dot-darwin.diff \
 							etc-irbrc.diff \
