dblatex:  - add dependency on texlive-latex-recommended (#25872)  - set Python interpreter path explicitly in bin/dblatex; prevents    ImportError if MacPorts python26 is not selected as default.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70250 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/dblatex/Portfile
+++ b/dports/textproc/dblatex/Portfile
@@ -6,6 +6,7 @@ PortGroup           python26 1.0
 
 name                dblatex
 version             0.3
+revision            1
 categories          textproc tex
 maintainers         nomaintainer
 platforms           darwin
@@ -35,6 +36,7 @@ use_bzip2           yes
 
 depends_lib         port:python26 \
                     port:texlive-latex-extra \
+                    port:texlive-latex-recommended \
                     port:texlive-math-extra \
                     port:dejavu-fonts \
                     port:ImageMagick \
@@ -48,6 +50,8 @@ destroot.destdir    --root=${destroot} \
 python.link_binaries no
 post-destroot {
     reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${python.prefix}/bin/dblatex
+    reinplace "s|#!/usr/bin/env python|#!${python.bin}|" ${destroot}${python.prefix}/bin/dblatex
+    
 
     fs-traverse f ${destroot}${python.prefix}/share {
         if {[file isfile $f]} {
