* bump to July 22nd version * fix path in comments * add dependencies to a couple of other extra modules * mark the port as openmaintainer so interested parties can pick it up
git-svn-id: https://svn.macports.org/repository/macports/trunk@70255 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/ikiwiki/Portfile
+++ b/dports/www/ikiwiki/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 PortGroup perl5 1.0
 
-perl5.setup             ikiwiki 3.20100704
+perl5.setup             ikiwiki 3.20100722
 name                    ikiwiki
 categories              www perl
 description             A wiki compiler.
@@ -14,7 +14,7 @@ long_description        Ikiwiki is a wiki compiler. It converts wiki pages \
                         features, including support for blogging, as well as a \
                         large array of plugins.
 homepage                http://ikiwiki.info/
-maintainers             tommyd
+maintainers             tommyd openmaintainer
 platforms               darwin
 master_sites            http://ftp.debian.org/debian/pool/main/i/ikiwiki/
 distname                ${name}_${version}
@@ -22,13 +22,13 @@ worksrcdir              ${name}
 
 patchfiles              patch-Makefile.PL.diff
 
-checksums               md5     b3666952b2b00b91c44d30b91e292bd1 \
-                        sha1    e27c46798e8a50bd67e957b83a488a240acf17d8 \
-                        rmd160  406b0077f126572b27cde728c44f3d51763ff1f6
+checksums               md5     c2aa8e0d602efdc7a3e94a81b9465348 \
+                        sha1    4613a82c48253996f858ae47e67e5e562c8272c8 \
+                        rmd160  33770af9aaa3308b2fb53e056ec47ef7a7bd09b8
 
 depends_build           port:coreutils
 
-# needed modules (see Bundles/IkiWiki.pm)
+# needed modules (see Bundle/IkiWiki.pm)
 depends_lib-append      port:p5-cgi-formbuilder \
                         port:p5-cgi-session \
                         port:p5-data-dumper \
@@ -43,15 +43,18 @@ depends_lib-append      port:p5-cgi-formbuilder \
                         port:p5-xml-simple
 
 # a couple of optional extra modules bundled from MacPorts used by plugins
-# (for a complete list see Bundles/IkiWiki/Extras.pm)
+# (for a complete list see Bundle/IkiWiki/Extras.pm)
 depends_lib-append      port:p5-crypt-ssleay \
                         port:p5-digest-sha1 \
                         port:p5-file-mimeinfo \
+                        port:p5-html-tree \
                         port:p5-locale-gettext \
                         port:p5-rpc-xml \
+                        port:p5-term-readline-gnu \
                         port:p5-text-csv \
                         port:p5-text-wikiformat \
-                        port:p5-xml-feed
+                        port:p5-xml-feed \
+                        port:p5-yaml
 
 destroot.target         CP=gcp install
 configure.args          INSTALLDIRS=vendor PREFIX=${prefix}
