--- a/dports/multimedia/ffmpeg-devel/Portfile
+++ b/dports/multimedia/ffmpeg-devel/Portfile
@@ -6,10 +6,9 @@ PortGroup xcodeversion 1.0
 
 name            ffmpeg-devel
 conflicts       ffmpeg
-set svn_rev     23429
-set swscale_rev 31301
+set svn_rev     24678
+set swscale_rev 31879
 version         ${svn_rev}
-revision        1
 license         nonfree GPLv2.1+ LGPLv2.1+
 categories      multimedia
 maintainers     devans openmaintainer
@@ -65,7 +64,6 @@ depends_lib     port:lame \
                 port:dirac \
                 port:schroedinger \
                 port:faac \
-                port:faad2 \
                 path:lib/libspeex.dylib:speex \
                 port:XviD \
                 port:x264 \
@@ -111,18 +109,16 @@ configure.args \
         --enable-nonfree \
         --enable-gpl \
         --enable-postproc \
-        --enable-swscale --enable-avfilter --enable-avfilter-lavf \
+        --enable-swscale --enable-avfilter \
         --enable-libmp3lame \
         --enable-libvorbis \
         --enable-libtheora \
         --enable-libdirac --enable-libschroedinger \
         --enable-libfaac \
-        --enable-libfaad \
         --enable-libxvid \
         --enable-libx264 \
         --enable-libvpx \
         --enable-libspeex \
-        --enable-nonfree \
         --mandir=${prefix}/share/man \
         --enable-shared --enable-pthreads \
         --disable-indevs \
@@ -176,8 +172,6 @@ variant no_mmx description {disable all x86 asm optimizations} {
 variant no_gpl description {disallow use of GPL code, license will be LGPL if +no_nonfree is selected} {
     configure.args-delete   --enable-gpl
     configure.args-delete   --enable-postproc
-    configure.args-delete   --enable-libfaad
-    depends_lib-delete      port:faad2
     configure.args-delete   --enable-libx264
     depends_build-delete    port:x264
     configure.args-delete   --enable-libxvid
@@ -230,7 +224,6 @@ post-activate {
 ******* The following modules are GPLed:
 *******
 *******      postproc
-*******      libfaad
 *******      libx264
 *******      libxvid
 *******
