gimp2: use python26, mark as conflicting with gimp2-devel
git-svn-id: https://svn.macports.org/repository/macports/trunk@70259 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp2/Portfile
+++ b/dports/graphics/gimp2/Portfile
@@ -4,9 +4,10 @@
 PortSystem 1.0
 
 name            gimp2
+conflicts       gimp2-devel
 # please remember to update the gimp metapackage to match
 version         2.6.10
-revision        1
+revision        2
 categories      graphics
 maintainers     devans
 homepage        http://www.gimp.org/
@@ -52,7 +53,7 @@ depends_lib     port:iso-codes \
                 port:libwmf \
                 port:lcms \
                 port:dbus-glib \
-                port:py25-gtk
+                port:py26-gtk
 
 platform darwin 9 {
     post-patch {
@@ -62,7 +63,7 @@ platform darwin 9 {
 }
 
 use_parallel_build  yes
-configure.python    ${prefix}/bin/python2.5
+configure.python    ${prefix}/bin/python2.6
 configure.args  --build=${configure.build_arch}-apple-${os.platform}${os.version} \
                 --enable-mp \
                 --with-pdbgen \
@@ -73,7 +74,7 @@ configure.args  --build=${configure.build_arch}-apple-${os.platform}${os.version
                 --without-webkit
 
 variant no_python description {Disable Python scripts and filters} {
-    depends_lib-delete      port:py25-gtk
+    depends_lib-delete      port:py26-gtk
     configure.args-append   --disable-python
 }
 
