various gimp plug-ins: allow either gimp2 or gimp2-devel via path dependency.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70260 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/ufraw/Portfile
+++ b/dports/graphics/ufraw/Portfile
@@ -23,7 +23,7 @@ checksums        md5     5e2c2b4adaea1f6d03eac66e11747fc6 \
                  sha1    0762b238cdcd708948b5aeac552f7f2b1edb1846 \
                  rmd160  785d46e6936f176220dbf77f86dd373ef0250a79
 
-depends_lib      port:dcraw port:gimp2 port:exiv2 port:gtkimageview port:cfitsio
+depends_lib      port:dcraw path:lib/pkgconfig/gimpui-2.0.pc:gimp2 port:exiv2 port:gtkimageview port:cfitsio
 
 # gimp2 is not universal
 universal_variant no
