--- a/dports/graphics/gimp-lqr-plugin/Portfile
+++ b/dports/graphics/gimp-lqr-plugin/Portfile
@@ -25,7 +25,8 @@ checksums       md5     d7ee28b16bdbd9f46bc9f21cf5deb487 \
                 sha1    cc7ae00ae4ba144e3f5bab6cc62f43e12cdee3f4 \
                 rmd160  d445204a295e4f9d5a5fc0f5fb7081c60bfc8a43
 
-depends_lib     port:liblqr port:gimp2
+depends_lib     port:liblqr \
+                path:lib/pkgconfig/gimp-2.0.pc:gimp2
 
 livecheck.type  regex
 livecheck.url   http://liquidrescale.wikidot.com/en:download-page
