--- a/dports/graphics/icns-gimp/Portfile
+++ b/dports/graphics/icns-gimp/Portfile
@@ -23,7 +23,7 @@ master_sites    sourceforge:gimp-mac-helper
 patchfiles      patch-Makefile.diff
 checksums       md5 e491775279b973db3cab06c7359855e8
 
-depends_lib     lib:libgimp-2.0:gimp2
+depends_lib     path:lib/libgimp-2.0:gimp2
 
 post-patch {
     reinplace "s|/sw|${prefix}|g" ${worksrcpath}/Makefile
